log/build_2025-05-19_23-41-09/lab4_image_receiver/stderr.log
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp: In function ‘int main(int, char**)’:
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:177:13: error: ‘spin’ is not a member of ‘rclcpp’
  177 |     rclcpp::spin(node);
      |             ^~~~
gmake[2]: *** [CMakeFiles/lab4_image_receiver_node.dir/build.make:76: CMakeFiles/lab4_image_receiver_node.dir/src/lab4_image_receiver_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/lab4_image_receiver_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
